# appointments/docs/swagger.yaml
@@ -477,7 +477,7 @@ paths:
       summary: 获取客户预约
       tags:
       - 预约管理
-  /appointments/employee/{employeeId}:
+  /appointments/staff/{staffId}:
     get:
       consumes:
       - application/json
@@ -485,7 +485,7 @@ paths:
       parameters:
       - description: 员工ID
         in: path
-        name: employeeId
+        name: staffId
         required: true
         type: string
       - default: 1
@@ -514,7 +514,7 @@ paths:
       summary: 获取员工预约
       tags:
       - 预约管理
-  /appointments/employee/{employeeId}/upcoming:
+  /appointments/staff/{staffId}/upcoming:
     get:
       consumes:
       - application/json
@@ -522,7 +522,7 @@ paths:
       parameters:
       - description: 员工ID
         in: path
-        name: employeeId
+        name: staffId
         required: true
         type: string
       - default: 10
